website/content/v1.2/cli/dkron_agent.md
---
date: 2019-03-22
title: "dkron agent"
slug: dkron_agent
url: url: /v1.2/cli/dkron_agent/
---
## dkron agent

Start a dkron agent

### Synopsis

Start a dkron agent that schedule jobs, listen for executions and run executors.
It also runs a web UI.

```
dkron agent [flags]
```

### Options

```
      --advertise-addr string        Address used to advertise to other nodes in the cluster. By default, the bind address is advertised
      --advertise-rpc-port int       Use the value of rpc-port by default
      --backend string               Store backend (etcd|etcdv3|consul|zk|redis|boltdb|dynamodb) (default "boltdb")
      --backend-machine strings      Store backend machines addresses (default [./dkron.db])
      --backend-password string      Store backend machines password or token, only REDIS/CONSUL
      --bind-addr string             Address to bind network listeners to (default "0.0.0.0:8946")
      --dog-statsd-addr string       DataDog Agent address
      --dog-statsd-tags strings      Datadog tags, specified as key:value
      --encrypt string               Key for encrypting network traffic. Must be a base64-encoded 16-byte key
  -h, --help                         help for agent
      --http-addr string             Address to bind the UI web server to. Only used when server (default ":8080")
      --join strings                 An initial agent to join with. This flag can be specified multiple times
      --keyspace string              The keyspace to use. A prefix under all data is stored for this instance (default "dkron")
      --log-level string             Log level (debug|info|warn|error|fatal|panic) (default "info")
      --mail-from string             From email address to use
      --mail-host string             Mail server host address to use for notifications
      --mail-password string         Mail server password to use
      --mail-payload string          Notification mail payload
      --mail-port uint16             Mail server port
      --mail-subject-prefix string   Notification mail subject prefix (default "[Dkron]")
      --mail-username string         Mail server username used for authentication
      --node-name string             Name of this node. Must be unique in the cluster (default "pris.local")
      --profile string               Profile is used to control the timing profiles used (default "lan")
      --rpc-port int                 RPC Port used to communicate with clients. Only used when server. The RPC IP Address will be the same as the bind address (default 6868)
      --server                       This node is running in server mode
      --statsd-addr string           Statsd address
      --tag strings                  Tag can be specified multiple times to attach multiple key/value tag pairs to the given node, specified as key=value
      --webhook-header strings       Headers to use when calling the webhook URL. Can be specified multiple times
      --webhook-payload string       Body of the POST request to send on webhook call
      --webhook-url string           Webhook url to call for notifications
```

### Options inherited from parent commands

```
      --config string   config file path
```

### SEE ALSO

* [dkron](/cli/dkron/)	 - Open source distributed job scheduling system

###### Auto generated by spf13/cobra on 22-Mar-2019
